fix: update wrong src

--- a/.github/.labeler.yml
+++ b/.github/.labeler.yml
@@ -1,8 +1,8 @@
 changes | resources:
-  - "KikoGuides/Resources/**/*"
+  - "src/Resources/**/*"
 
 changes | ci:
   - ".github/workflows/**/*"
 
 changes | plugin:
-  - "KikoGuide/**/*.cs"
+  - "src/**/*.cs"
