--- a/.github/ISSUE_TEMPLATE/guide_ammendment.yaml
+++ b/.github/ISSUE_TEMPLATE/guide_ammendment.yaml
@@ -1,6 +1,6 @@
 name: 📃 Guide Amendment
 description: Report issues with or suggested changes for guides.
-title: "Documentation: "
+title: "Guide Amendment: "
 labels: "type | Amendment"
 body:
   - type: markdown
@@ -17,6 +17,12 @@ body:
       options:
         - label: I have searched for existing issues and cannot find mine, or existing issues do not fit.
           required: true
+
+  - type: inout
+    attributes:
+      label: Name of Guide?
+    validations:
+      required: true
 
   - type: textarea
     attributes:
