--- a/.github/ISSUE_TEMPLATE/guide_ammendment.yaml
+++ b/.github/ISSUE_TEMPLATE/guide_ammendment.yaml
@@ -18,7 +18,7 @@ body:
         - label: I have searched for existing issues and cannot find mine, or existing issues do not fit.
           required: true
 
-  - type: inout
+  - type: input
     attributes:
       label: Name of Guide?
     validations:
