ci: final release ci fixes
Signed-off-by: BitsOfAByte <19539165+BitsOfAByte@users.noreply.github.com>

--- a/.github/workflows/tag_release.yml
+++ b/.github/workflows/tag_release.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Build Plugin
         shell: bash
         run: |
-          dotnet build -p:AssemblyVersion=${{ steps.tag_name.outputs.TAG }} -p:AssemblyInformationalVersion=${{ steps.tag_name }}
+          dotnet build --configuration Release -p:AssemblyVersion=${{ steps.tag_name.outputs.TAG }} -p:AssemblyInformationalVersion=${{ steps.tag_name }}
           zip -r latest.zip src/bin/Release/KikoGuide
           sha512sum latest.zip > latest.zip.sha512sum
           cat latest.zip.sha512sum
