ci: update ci for D17

--- a/.github/workflows/pr_code_changes.yml
+++ b/.github/workflows/pr_code_changes.yml
@@ -28,6 +28,7 @@ jobs:
           cd src
           wget -O Lib.zip https://goatcorp.github.io/dalamud-distrib/latest.zip
           unzip Lib.zip -d Lib
+          export IsCI=true
 
       - name: Build Plugin
         run: |
