--- a/.github/workflows/tag_release.yml
+++ b/.github/workflows/tag_release.yml
@@ -30,8 +30,9 @@ jobs:
       - name: Download Dalamud Library
         run: |
           cd src
-          wget -O Lib.zip https://goatcorp.github.io/dalamud-distrib/latest.zip
-          unzip -o -d Lib Lib.zip
+          wget -O Dalamud.zip https://goatcorp.github.io/dalamud-distrib/latest.zip
+          unzip -o -d Dalamud Dalamud.zip
+          export IsCI=true
 
       - name: Get Tag Name
         id: tag_name
