--- a/.github/workflows/pr_code_changes.yml
+++ b/.github/workflows/pr_code_changes.yml
@@ -15,6 +15,24 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
+        
+      - name: Post/Edit Initial Comment
+        uses: thollander/actions-comment-pull-request@v1
+        with:
+          message: |
+            ### Building ${{ github.action_repository }} <span aria-hidden="true">🚧</span>
+            This could take several minutes to complete, when finished this comment will be edited.
+
+            |  Name | Detail |
+            |---------------------------------|------------------------------------------------------------------------------------|
+            | **Commit** 						          | ${{ github.sha }}                                                                  |
+            | **Logs** 							          | ${{ github.server_url }}${{ github.repository }}/actions/runs/${{ github.run_id }} |
+            | **Build Environment** 			    | ${{ runner.os }}/${{ runner.arch }}                                                |
+            | **Triggered By**							  | [${{ github.actor }}](https://github.com/${{ github.actor }})                      |
+            
+            identifier: preview-build
+          comment_includes: "preview build"
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set up .NET
         uses: actions/setup-dotnet@v1
@@ -35,3 +53,49 @@ jobs:
         run: |
           dotnet build
           dotnet build --configuration Release
+
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: build
+          path: ./src/bin
+          
+      - name: Edit Comment (Success)
+        uses: thollander/actions-comment-pull-request@v1
+        with:
+          message: |
+            ### Build Complete for ${{ github.action_repository }} <span aria-hidden="true">✅</span>
+            No failures were recorded when building the Plugin and an artifact has been uploaded. 
+            
+            ⚠️ Please review all code changes before downloading the Artifact for security. Users should never use developer builds from pull requests. 
+
+            |  Name | Detail |
+            |---------------------------------|------------------------------------------------------------------------------------|
+            | **Commit** 						          | ${{ github.sha }}                                                                  |
+            | **Artifact URL** 							  | ${{ github.server_url }}${{ github.repository }}/actions/runs/${{ github.run_id }} |
+            | **Build Environment** 			    | ${{ runner.os }}/${{ runner.arch }}                                                |
+            | **Triggered By**							  | [${{ github.actor }}](https://github.com/${{ github.actor }})                      |
+            
+            identifier: preview-build
+          comment_includes: "preview build"
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          
+      - name: Edit Comment (Failure)
+        if: ${{ failure() }}
+        uses: thollander/actions-comment-pull-request@v1
+        with:
+          message: |
+            ### Build Failed for ${{ github.action_repository }} <span aria-hidden="true">❌</span>
+            Something went wrong during the build of the plugin. Please view the logs to find out more information.
+            
+
+            |  Name | Detail |
+            |---------------------------------|------------------------------------------------------------------------------------|
+            | **Commit** 						          | ${{ github.sha }}                                                                  |
+            | **Artifact URL** 							  | ${{ github.server_url }}${{ github.repository }}/actions/runs/${{ github.run_id }} |
+            | **Build Environment** 			    | ${{ runner.os }}/${{ runner.arch }}                                                |
+            | **Triggered By**							  | [${{ github.actor }}](https://github.com/${{ github.actor }})                      |
+            
+            identifier: preview-build
+          comment_includes: "preview build"
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
