--- a/.github/workflows/pr_code_changes.yml
+++ b/.github/workflows/pr_code_changes.yml
@@ -20,7 +20,7 @@ jobs:
         uses: thollander/actions-comment-pull-request@v1
         with:
           message: |
-            ### Building ${{ github.action_repository }} <span aria-hidden="true">🚧</span>
+            ### Building ${{ github.repository}} <span aria-hidden="true">🚧</span>
             This could take several minutes to complete, when finished this comment will be edited.
 
             |  Name | Detail |
@@ -31,7 +31,7 @@ jobs:
             | **Triggered By**							  | [${{ github.actor }}](https://github.com/${{ github.actor }})                      |
             
             identifier: preview-build
-          comment_includes: "preview build"
+          comment_includes: "preview-build"
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set up .NET
@@ -64,7 +64,7 @@ jobs:
         uses: thollander/actions-comment-pull-request@v1
         with:
           message: |
-            ### Build Complete for ${{ github.action_repository }} <span aria-hidden="true">✅</span>
+            ### Build Complete for ${{ github.repository }} <span aria-hidden="true">✅</span>
             No failures were recorded when building the Plugin and an artifact has been uploaded. 
             
             ⚠️ Please review all code changes before downloading the Artifact for security. Users should never use developer builds from pull requests. 
@@ -85,7 +85,7 @@ jobs:
         uses: thollander/actions-comment-pull-request@v1
         with:
           message: |
-            ### Build Failed for ${{ github.action_repository }} <span aria-hidden="true">❌</span>
+            ### Build Failed for ${{ github.repository }} <span aria-hidden="true">❌</span>
             Something went wrong during the build of the plugin. Please view the logs to find out more information.
             
 
@@ -97,5 +97,5 @@ jobs:
             | **Triggered By**							  | [${{ github.actor }}](https://github.com/${{ github.actor }})                      |
             
             identifier: preview-build
-          comment_includes: "preview build"
+          comment_includes: "preview-build"
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
