--- a/.github/workflows/pr_code_changes.yml
+++ b/.github/workflows/pr_code_changes.yml
@@ -26,7 +26,7 @@ jobs:
             |  Name | Detail |
             |---------------------------------|------------------------------------------------------------------------------------|
             | **Commit** 						          | ${{ github.sha }}                                                                  |
-            | **Logs** 							          | ${{ github.server_url }}${{ github.repository }}/actions/runs/${{ github.run_id }} |
+            | **Logs** 							          | ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }} |
             | **Build Environment** 			    | ${{ runner.os }}/${{ runner.arch }}                                                |
             | **Triggered By**							  | [${{ github.actor }}](https://github.com/${{ github.actor }})                      |
             
@@ -72,7 +72,7 @@ jobs:
             |  Name | Detail |
             |---------------------------------|------------------------------------------------------------------------------------|
             | **Commit** 						          | ${{ github.sha }}                                                                  |
-            | **Artifact URL** 							  | ${{ github.server_url }}${{ github.repository }}/actions/runs/${{ github.run_id }} |
+            | **Artifact URL** 							  | ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }} |
             | **Build Environment** 			    | ${{ runner.os }}/${{ runner.arch }}                                                |
             | **Triggered By**							  | [${{ github.actor }}](https://github.com/${{ github.actor }})                      |
             
@@ -92,7 +92,7 @@ jobs:
             |  Name | Detail |
             |---------------------------------|------------------------------------------------------------------------------------|
             | **Commit** 						          | ${{ github.sha }}                                                                  |
-            | **Artifact URL** 							  | ${{ github.server_url }}${{ github.repository }}/actions/runs/${{ github.run_id }} |
+            | **Logs** 							          | ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }} |
             | **Build Environment** 			    | ${{ runner.os }}/${{ runner.arch }}                                                |
             | **Triggered By**							  | [${{ github.actor }}](https://github.com/${{ github.actor }})                      |
             
