--- a/.github/workflows/pr_code_changes.yml
+++ b/.github/workflows/pr_code_changes.yml
@@ -7,6 +7,7 @@ on:
     branches: [main]
     paths:
       - "**.cs"
+    types: [ready_for_review, opened, synchronize, reopened]
 
 jobs:
   Build:
