ci: adjust comment for clarity
Signed-off-by: Harmony <19539165+BitsOfAByte@users.noreply.github.com>

--- a/.github/workflows/pr_code_changes.yml
+++ b/.github/workflows/pr_code_changes.yml
@@ -22,14 +22,14 @@ jobs:
         with:
           message: |
             ### Building ${{ github.repository}} <span aria-hidden="true">🚧</span>
-            This could take several minutes to complete, when finished this comment will be edited.
-
+            Please wait, this could take several minutes to complete. This comment will be edited when finished.
+            
             |  Name | Detail |
-            |---------------------------------|------------------------------------------------------------------------------------|
-            | **Commit** 						          | ${{ github.sha }}                                                                  |
+            |---------------------------------|-------------------------------------------------------------------------------------|
+            | **Commit** 						          | ${{ github.sha }}                                                                   |
             | **Logs** 							          | ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }} |
-            | **Build Environment** 			    | ${{ runner.os }}/${{ runner.arch }}                                                |
-            | **Triggered By**							  | [${{ github.actor }}](https://github.com/${{ github.actor }})                      |
+            | **Build Environment** 			    | ${{ runner.os }}/${{ runner.arch }}                                                 |
+            | **Triggered By**							  | [${{ github.actor }}](https://github.com/${{ github.actor }})                       |
             
             identifier: preview-build
           comment_includes: "preview-build"
@@ -69,17 +69,17 @@ jobs:
         uses: thollander/actions-comment-pull-request@v1
         with:
           message: |
-            ### Build Complete for ${{ github.repository }} <span aria-hidden="true">✅</span>
-            No failures were recorded when building the Plugin and an artifact has been uploaded. 
+            ### Build Complete for ${{ github.repository }} <span aria-hidden="true">⚡</span>
+            All builds finished without issues and any artifact(s) have been uploaded.
             
-            ⚠️ Please review all code changes before downloading the Artifact for security. Users should never use developer builds from pull requests. 
-
             |  Name | Detail |
             |---------------------------------|------------------------------------------------------------------------------------|
             | **Commit** 						          | ${{ github.sha }}                                                                  |
-            | **Artifact URL** 							  | ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }} |
+            | **Logs** 							  | ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}        |
             | **Build Environment** 			    | ${{ runner.os }}/${{ runner.arch }}                                                |
             | **Triggered By**							  | [${{ github.actor }}](https://github.com/${{ github.actor }})                      |
+            
+            *Please review the code before downloading any artifacts for security reasons.* 
             
             identifier: preview-build
           comment_includes: "preview-build"
@@ -90,16 +90,15 @@ jobs:
         uses: thollander/actions-comment-pull-request@v1
         with:
           message: |
-            ### Build Failed for ${{ github.repository }} <span aria-hidden="true">❌</span>
-            Something went wrong during the build of the plugin. Please view the logs to find out more information.
+            ### Build Failed for ${{ github.repository }} <span aria-hidden="true">⚠️</span>
+            Something went wrong when running a build, please view the logs for more information about this.
             
-
             |  Name | Detail |
-            |---------------------------------|------------------------------------------------------------------------------------|
-            | **Commit** 						          | ${{ github.sha }}                                                                  |
+            |---------------------------------|-------------------------------------------------------------------------------------|
+            | **Commit** 						          | ${{ github.sha }}                                                                   |
             | **Logs** 							          | ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }} |
-            | **Build Environment** 			    | ${{ runner.os }}/${{ runner.arch }}                                                |
-            | **Triggered By**							  | [${{ github.actor }}](https://github.com/${{ github.actor }})                      |
+            | **Build Environment** 			    | ${{ runner.os }}/${{ runner.arch }}                                                 |
+            | **Triggered By**							  | [${{ github.actor }}](https://github.com/${{ github.actor }})                       |
             
             identifier: preview-build
           comment_includes: "preview-build"
