--- a/.github/workflows/pr_json_changes.yml
+++ b/.github/workflows/pr_json_changes.yml
@@ -1,10 +1,12 @@
 name: "PR: JSON Changes"
 
 on:
+  push:
+    branches: [main]
   pull_request:
-      branches: [main]
-      paths:
-       - '**.json'
+    branches: [main]
+    paths:
+      - "**.json"
 
 jobs:
   Validate:
@@ -13,7 +15,7 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
-        
+
       - name: Validate JSON Syntax
         uses: limitusus/json-syntax-check@v1
         with:
