--- a/.github/workflows/pr_json_changes.yml
+++ b/.github/workflows/pr_json_changes.yml
@@ -7,6 +7,7 @@ on:
     branches: [main]
     paths:
       - "**.json"
+    types: [ready_for_review, opened, synchronize, reopened]
 
 jobs:
   Validate:
