--- a/src/KikoGuide.csproj
+++ b/src/KikoGuide.csproj
@@ -25,6 +25,12 @@
     </None>
   </ItemGroup>
 
+  <!-- <ItemGroup>
+    <EmbeddedResource Include="Resources\**\*.*">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+  </ItemGroup> -->
+
   <PropertyGroup>
     <DalamudLibPath>$(appdata)\XIVLauncher\addon\Hooks\dev\</DalamudLibPath>
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
