--- a/.github/workflows/pr_chores.yml
+++ b/.github/workflows/pr_chores.yml
@@ -1,7 +1,7 @@
 name: "PR: Chores"
 
 on:
-  pull_request_target:
+  pull_request:
     branches: [main]
     types: [ready_for_review, opened, synchronize, reopened]
 
