--- a/.github/workflows/always_linter.yml
+++ b/.github/workflows/always_linter.yml
@@ -1,4 +1,4 @@
-name: "PR: Run Linter"
+name: "Always: Linting"
 
 on:
   push:
@@ -18,6 +18,8 @@ jobs:
       - name: Lint Codebase
         uses: github/super-linter@v4
         env:
-          VALIDATE_ALL_CODEBASE: true
-          DEFAULT_BRANCH: master
+          VALIDATE_ALL_CODEBASE: false
+          VALIDATE_YAML: false
+          VALIDATE_GITLEAKS: false
+          DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
