--- a/.github/workflows/always_linter.yml
+++ b/.github/workflows/always_linter.yml
@@ -21,5 +21,6 @@ jobs:
           VALIDATE_ALL_CODEBASE: false
           VALIDATE_YAML: false
           VALIDATE_GITLEAKS: false
+          VALIDATE_MARKDOWN: false
           DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
