--- a/.github/workflows/always_linter.yml
+++ b/.github/workflows/always_linter.yml
@@ -11,6 +11,9 @@ jobs:
   Validate:
     if: github.event.pull_request.draft == false
     runs-on: ubuntu-latest
+    concurrency:
+      group: ${{ github.workflow }}-${{ github.ref }}
+      cancel-in-progress: true
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
