chore: update title
Signed-off-by: Harmony <19539165+BitsOfAByte@users.noreply.github.com>

--- a/.github/ISSUE_TEMPLATE/guide_issue_report.yaml
+++ b/.github/ISSUE_TEMPLATE/guide_issue_report.yaml
@@ -1,6 +1,6 @@
 name: 📃 Guide Issue Report
 description: Report issues or suggest changes for guides.
-title: "Guide Amendment: "
+title: "Guide Issue Report: "
 labels: "type | guide-problem"
 body:
   - type: markdown
