--- a/KikoGuide/.editorconfig
+++ b/KikoGuide/.editorconfig
@@ -412,6 +412,8 @@ dotnet_naming_rule.parameters_rule.severity             = warning
 dotnet_diagnostic.CA1305.severity = none # "Specify IFormatProvider"
 dotnet_diagnostic.CA1304.severity = none # "Specify CultureInfo"
 dotnet_diagnostic.IDE0058.severity = none # "Expression value is never used"
+dotnet_diagnostic.IDE0010.severity = none # "Add missing cases"
+dotnet_diagnostic.RCS1061.severity = silent # "Merge if with nested if"
 
 ##########################################
 # License
