--- a/KikoGuide/.editorconfig
+++ b/KikoGuide/.editorconfig
@@ -413,7 +413,7 @@ dotnet_diagnostic.CA1305.severity = none # "Specify IFormatProvider"
 dotnet_diagnostic.CA1304.severity = none # "Specify CultureInfo"
 dotnet_diagnostic.IDE0058.severity = none # "Expression value is never used"
 dotnet_diagnostic.IDE0010.severity = none # "Add missing cases"
-dotnet_diagnostic.RCS1061.severity = silent # "Merge if with nested if"
+dotnet_diagnostic.RCS1061.severity = none # "Merge if with nested if"
 
 ##########################################
 # License
