chore: add EditorConfig to container extensions

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,10 +11,11 @@
     "customizations": {
         "vscode": {
             "extensions": [
-                "ms-dotnettools.csharp",
-                "wayou.vscode-todo-highlight",
-                "vivaxy.vscode-conventional-commits"
-            ]
+				"ms-dotnettools.csharp",
+				"wayou.vscode-todo-highlight",
+				"vivaxy.vscode-conventional-commits",
+				"EditorConfig.EditorConfig"
+			]
         }
     }
 }
