--- a/.github/workflows/pr_code_changes.yml
+++ b/.github/workflows/pr_code_changes.yml
@@ -5,7 +5,8 @@ on:
     branches: [main]
     paths:
       - "KikoGuide/**.cs"
-    types: [ready_for_review, opened, synchronize, reopened]
+      - "KikoGuide/**.csproj"
+    types: [ready_for_review, opened, synchronize]
 
 jobs:
   Build:
@@ -18,24 +19,6 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
-      - name: Post/Edit Initial Comment
-        uses: thollander/actions-comment-pull-request@v1
-        with:
-          message: |
-            ### Building ${{ github.repository}} <span aria-hidden="true">🚧</span>
-            Please wait, this could take several minutes to complete. This comment will be edited when finished.
-
-            |  Name | Detail |
-            |---------------------------------|-------------------------------------------------------------------------------------|
-            | **Commit** 						          | ${{ github.sha }}                                                                   |
-            | **Logs** 							          | ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }} |
-            | **Build Environment** 			    | ${{ runner.os }}/${{ runner.arch }}                                                 |
-            | **Triggered By**							  | [${{ github.actor }}](https://github.com/${{ github.actor }})                       |
-
-            identifier: preview-build
-          comment_includes: "preview-build"
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
       - name: Set up .NET
         uses: actions/setup-dotnet@v1
         with:
@@ -46,61 +29,26 @@ jobs:
         run: dotnet restore
 
       - name: Download Dalamud Library
-        working-directory: KikoGuide/
         run: |
-          wget -O Lib.zip https://goatcorp.github.io/dalamud-distrib/latest.zip
-          unzip Lib.zip -d Lib
-          export IsCI=true
+          wget https://goatcorp.github.io/dalamud-distrib/latest.zip -O /tmp/dalamud.zip
+          unzip /tmp/dalamud.zip -d /tmp/dalamud
 
       - name: Build Plugin (Dev)
         working-directory: KikoGuide/
         run: dotnet build
+        env:
+          DALAMUD_HOME: /tmp/dalamud
+          IsCI: true
 
       - name: Build Plugin (Release)
         working-directory: KikoGuide/
         run: dotnet build --configuration Release
+        env:
+          DALAMUD_HOME: /tmp/dalamud
+          IsCI: true
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v3
         with:
           name: build
           path: ./KikoGuide/bin
-
-      - name: Edit Comment (Success)
-        uses: thollander/actions-comment-pull-request@v1
-        with:
-          message: |
-            ### Build Complete for ${{ github.repository }} <span aria-hidden="true">⚡</span>
-            All builds finished without issues and any artifact(s) have been uploaded.
-
-            |  Name | Detail |
-            |---------------------------------|------------------------------------------------------------------------------------|
-            | **Commit** 						          | ${{ github.sha }}                                                                  |
-            | **Logs & Artifacts** 					  | ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}        |
-            | **Build Environment** 			    | ${{ runner.os }}/${{ runner.arch }}                                                |
-            | **Triggered By**							  | [${{ github.actor }}](https://github.com/${{ github.actor }})                      |
-
-            *Please review the code before downloading any artifacts for security reasons.* 
-
-            identifier: preview-build
-          comment_includes: "preview-build"
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Edit Comment (Failure)
-        if: ${{ failure() }}
-        uses: thollander/actions-comment-pull-request@v1
-        with:
-          message: |
-            ### Build Failed for ${{ github.repository }} <span aria-hidden="true">⚠️</span>
-            Something went wrong when running a build, please view the logs for more information about this.
-
-            |  Name | Detail |
-            |---------------------------------|-------------------------------------------------------------------------------------|
-            | **Commit** 						          | ${{ github.sha }}                                                                   |
-            | **Logs** 							          | ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }} |
-            | **Build Environment** 			    | ${{ runner.os }}/${{ runner.arch }}                                                 |
-            | **Triggered By**							  | [${{ github.actor }}](https://github.com/${{ github.actor }})                       |
-
-            identifier: preview-build
-          comment_includes: "preview-build"
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
