chore: fix commit msg
Signed-off-by: Harmony <19539165+BitsOfAByte@users.noreply.github.com>

--- a/crowdin.yml
+++ b/crowdin.yml
@@ -3,5 +3,5 @@ files:
     translation: /%original_path%/%two_letters_code%.json
 
 pull_request_title: "chore(i18n): Translation updates (Crowdin)"
-commit_message: "chore(i18n): translations updates for %two_letters_code% [skip ci]"
+commit_message: "chore(i18n): translations updates for %original_file_name% [skip ci]"
 append_commit_message: false
