feat: guide loading + window baseline

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,7 +11,7 @@
     "customizations": {
         "vscode": {
             "extensions": [
-                "editorconfig.editorconfig",
+                "ms-dotnettools.csharp",
                 "tintoy.msbuild-project-tools",
                 "kreativ-software.csharpextensions"
             ]
