--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,6 @@
 {
     "recommendations": [
-        "editorconfig.editorconfig",
+        "ms-dotnettools.csharp",
         "tintoy.msbuild-project-tools",
         "kreativ-software.csharpextensions"
     ]
