feat: use resx for localization

--- a/KikoGuide/KikoGuide.csproj
+++ b/KikoGuide/KikoGuide.csproj
@@ -46,9 +46,19 @@
     </ItemGroup>
   </Target>
 
-  <!-- Plugin Resources -->
+  <!-- Localization -->
   <ItemGroup>
-    <EmbeddedResource Include="Resources\**\*.*" Exclude="Resources\**\*Localizable.*" />
+    <EmbeddedResource Update="Resources\Localization\Strings.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Strings.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Update="Resources\Localization\Strings.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Strings.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
 
   <!-- Dalamud Path -->
