chore: update solution file + extensions

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,10 +11,11 @@
     "customizations": {
         "vscode": {
             "extensions": [
-                "ms-dotnettools.csharp",
-                "tintoy.msbuild-project-tools",
-                "kreativ-software.csharpextensions"
-            ]
+				"ms-dotnettools.csharp",
+				"tintoy.msbuild-project-tools",
+				"kreativ-software.csharpextensions",
+				"fernandoescolar.vscode-solution-explorer"
+			]
         }
     }
 }
