--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,7 @@
     "recommendations": [
         "ms-dotnettools.csharp",
         "tintoy.msbuild-project-tools",
-        "kreativ-software.csharpextensions"
+        "kreativ-software.csharpextensions",
+        "fernandoescolar.vscode-solution-explorer"
     ]
 }
