feat: finalize ui and implementations

--- a/KikoGuide/KikoGuide.csproj
+++ b/KikoGuide/KikoGuide.csproj
@@ -107,5 +107,9 @@
       <HintPath>$(DalamudLibPath)Lumina.Excel.dll</HintPath>
       <Private>false</Private>
     </Reference>
+    <Reference Include="CheapLoc">
+      <HintPath>$(DalamudLibPath)CheapLoc.dll</HintPath>
+      <Private>false</Private>
+    </Reference>
   </ItemGroup>
 </Project>
